# rusty-pipe

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
src/: main.rs
src/core/: cli.rs  core.rs  endpoint.rs  mux.rs
src/core/cli/: agent.rs  complete.rs  cp.rs  ls.rs  path_parser.rs  pf.rs
src/core/endpoint/: docker.rs  kube.rs  socket.rs  stdio.rs
