[package]
name = "rs"
version = "0.1.0"
edition = "2021"
default-run = "rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
path = "src/core/core.rs"


[dependencies]
kube = {version="0.74.0", features=["ws"]}
tokio = {version="1.20.0", features= ["full", "io-util"]}
k8s-openapi = {version = "0.15.0", features = ["v1_19"] }
futures = "0.3.21"
home = "0.5.3"
tokio-util = "0.7.3"
bytes = "1.2.1"
anyhow = "1.0.59"
env_logger = "0.9.0"
log = "0.4.17"
async-trait = "0.1.57"
clap = {version="3.2.16", features=["derive"]}
bollard = "0.13.0"

[profile.release]
strip = true
opt-level = "z"
lto = true

